# HTTPServer

./: ..gitignore.un~  .gitignore  .gitignore~  CMakeLists.txt  README.md  compile.bat  compile.sh  config.json  debug.bat  debug.sh  err-code-list.md  err-code-list.txt  httpserver
.github/workflows/: build.yml
app/: client.c  main.c  properties.c  setting.c  settings.c  socket.c
app/include/: client.h  properties.h  setting.h  settings.h
server-content/: index.html  scripts.js  styles.css
src/: client.c  gzip.c  http.c  main.c  metrics.c  settings.c  shutdown.c  socket.c  threadpool.c
src/include/: access_log.h  client.h  compat.h  gzip.h  http.h  logger.h  metrics.h  settings.h  shutdown.h  socket.h  validator.h  whitelist.h
src/main/c/: client.c  http.c  logger.c  main.c  settings.c  socket.c
src/main/c/include/: client.h  logger.h  settings.h
src/main/cpp/: client.c  http.c  main.c  php.c  settings.c  socket.c
src/main/cpp/include/: client.h  http.h  php.h  settings.h
